include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libadlib.la

noinst_HEADERS = \
                 adlib.hpp \
                 adlplayer.hpp \
                 $(EMPTY)

libadlib_la_SOURCES = \
                      adlib.cpp \
                      adlplayer.cpp \
                      $(EMPTY)
