include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libcommon.la

noinst_HEADERS = \
                 types.hpp \
                 system.hpp \
                 endianness.hpp \
                 util.hpp \
                 $(EMPTY)

libcommon_la_SOURCES = \
                       util.cpp \
                       $(EMPTY)
