include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libcommon.la

noinst_HEADERS = \
                 types.hpp \
                 system.hpp \
                 endianness.hpp \
                 util.hpp \
                 version.hpp \
                 error.hpp \
                 stream.hpp \
                 noncopyable.hpp \
                 file.hpp \
                 $(EMPTY)

libcommon_la_SOURCES = \
                       util.cpp \
                       version.cpp \
                       error.cpp \
                       stream.cpp \
                       file.cpp \
                       $(EMPTY)
